# HerrStraussGoodAgents

./: .env.example  .gitignore  main.py  pyproject.toml
configs/agents/: archive.json  assessment_v1.yaml  final_notice_v1.yaml  resolution_v1.yaml
configs/evaluation/: rubric_v1.yaml
configs/personas/: combative_borrower.yaml  confused_borrower.yaml  cooperative_borrower.yaml  distressed_borrower.yaml  evasive_borrower.yaml
src/herrstraussgoodagents/: config.py  models.py
src/herrstraussgoodagents/agents/: assessment.py  base.py  final_notice.py  resolution.py
src/herrstraussgoodagents/api/: bridge.py  server.py
src/herrstraussgoodagents/compliance/: auditor.py  rules.py
src/herrstraussgoodagents/frontend/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
src/herrstraussgoodagents/handoff/: __init__.py  context.py  summarizer.py
src/herrstraussgoodagents/harness/: __init__.py  persona_loader.py  runner.py  simulator.py
src/herrstraussgoodagents/learning/: __init__.py  archive.py  evaluator.py  failure_analyzer.py  loop.py  mutator.py  statistics.py
src/herrstraussgoodagents/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py  vertexai_client.py
src/herrstraussgoodagents/voice/: __init__.py  hangup_detector.py  pipeline.py  transport.py
src/herrstraussgoodagents/workflow/: activities.py  collections_workflow.py  worker.py
